ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/service-weights: |
      croc: 99%
      tomcat: 1%
spec:
  rules:
    - host: cid.dev.uqudo.io
      http:
        paths:
        - path: /
          backend:
            serviceName: node-app
            servicePort: 3000
        - path: /
          backend:
            serviceName: tomcat
            servicePort: 8080
